# pond_ssg

./: .gitignore  Cargo.toml  LICENSE  config.toml  index.html  readme.md
.github/workflows/: static.yml
cli/: Cargo.toml  Dockerfile  config.toml  sample_input.md  sample_output.html
cli/content/: Cronjobs.md  On Logging.md  sample (3rd copy).md  sample.md  sample_input.html  sample_input.md
cli/src/: config.rs  config.toml  consolidate_into_homepage.rs  main.rs  parse.rs  parse_one_article.rs
content/: Cronjobs.md  Debugging C++ Programs with GDB.md  On Logging.md  What I'm learning as a computer science student.md  _thing.md  cheating.md  conference.md  deletethis.md  file_for_testing2.md  gdb.md  image.md  makefiles.md  moo.md  new_blog.md  newest_blog.md
documentation/: adding_images.md  parellel_programming.txt
src/: config.rs  consolidate_into_homepage.rs  file_utils.rs  logger.rs  main.rs  parse_one_article.rs  utils.rs
