[package]
name = "pond-ssg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"
notify = "6.1.1"
pulldown-cmark = "0.9.3"
serde = { version="1.0.196", features = ["derive"] }
toml = "0.8.10"
